--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Learning node, express and mongoDB",
 	"main": "app.js",
 	"scripts": {
-		"start": "nodemon server.js",
+		"start": "node server.js",
+		"dev": "nodemon server.js",
 		"start:prod": "NODE_ENV=production nodemon server.js",
 		"watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
 		"build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
@@ -34,5 +35,8 @@
 	},
 	"devDependencies": {
 		"parcel-bundler": "^1.12.5"
-	}
+	},
+      "engines": {
+            "node": ">=10.0.0"
+      }
 }
