--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
 		"express-rate-limit": "^7.2.0",
 		"helmet": "^7.1.0",
 		"hpp": "^0.2.3",
+		"html-to-text": "^9.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^5.13.22",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.13",
 		"pug": "^3.0.2",
+		"sharp": "^0.33.3",
 		"slugify": "^1.6.6",
 		"validator": "^13.11.0",
 		"xss-clean": "^0.1.4"
@@ -36,7 +39,7 @@
 	"devDependencies": {
 		"parcel-bundler": "^1.12.5"
 	},
-      "engines": {
-            "node": ">=10.0.0"
-      }
+	"engines": {
+		"node": ">=10.0.0"
+	}
 }
